<resources>
    <string name="app_name">AndroidCalculator</string>
    <string name="hint_formula_text">no formula</string>
    <string name="hint_result_text">no Ans</string>
    <string name="banana_find">Let\'s find one banana!</string>

    <string name="zero_button">0</string>
    <string name="dot_button">.</string>
    <string name="equal_button">=</string>
    <string name="one_button">1</string>
    <string name="two_button">2</string>
    <string name="three_button">3</string>
    <string name="four_button">4</string>
    <string name="five_button">5</string>
    <string name="six_button">6</string>
    <string name="seven_button">7</string>
    <string name="eight_button">8</string>
    <string name="nine_button">9</string>
    <string name="plus_button">+</string>
    <string name="minus_button">-</string>
    <string name="multiple_button">*</string>
    <string name="allClear_button">AC</string>
    <string name="answer_button">Ans</string>
    <string name="delete_button">del</string>
    <string name="percent_button">%</string>
    <string name="divide_button">/</string>
    <string name="format_last_charactor">lastCharacter = %s</string>
    <string name="title_detail">電卓とゲームを一緒にしました。。</string>
    <string name="back">Back</string>

    <string name="bio">使える機能は。。。
    \n\n<u><b>(実装✅)電卓...</b></u>
        \n 電卓です。
        \n(M)VVMに従ってUIと変数の処理を分けました。
        \nコードは見やすいようにリファクタリングが必要必要かも。
        \n予想外の量関数をデバッグしなきゃいけなくてびっくりしました。
    \n\n<u><b>(未実装)バナナを探せゲーム1...</b></u>
        \n 電卓で答えを出すまでに押した数字の回数だけリンゴの画像が表示され、その中からバナナを見つけるゲームです。
    \n\n<u><b>(未実装)バナナを探せゲーム2...</b></u>
        \n なんとかしてバナナを見つけてください。（場合によっちゃすぐに見つかってしまいますが）
    \n\n <b>(and more....?)</b>
    </string>
    <string name="detail">detail</string>
    <string name="git_url_text"><u>https://github.com/Zousaaaaaan/AndroidCalculator</u></string>
    <string name="banana_game">ばななゲーム1</string>
    <string name="inform_wrong">ハズレ</string>
    <string name="header_text">バナナはどこ？</string>
    <string name="next_level">NextLevel</string>
    <string name="clear">clear</string>
    <string name="game_over">GameOver</string>
    <string name="try_again">try again</string>
    <string name="give_up_text">give up</string>
    <string name="back_to_calculator">back Calculator</string>
</resources>
