<?xml version="1.0" encoding="utf-8"?>

<!-- TODO: なんかGridLayoutの数字が、margin=16dpの時消える。。 -->
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.gridlayout.widget.GridLayout
            android:id="@+id/grid_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:columnCount="4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:rowCount="5"
            app:orientation="horizontal">

            <!-- row1 -->
            <Button
                android:id="@+id/all_clear_button"
                android:fontFamily="sans-serif-medium"
                android:text="@string/allClear_button"
                android:textSize="20sp"
                app:layout_column="0"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_row="0" />

            <Button
                android:id="@+id/delete_button"
                android:fontFamily="sans-serif-medium"
                android:text="@string/delete_button"
                android:textSize="20sp"
                app:layout_column="1"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_row="0" />

            <Button
                android:id="@+id/percent_button"
                android:fontFamily="sans-serif-medium"
                android:text="@string/percent_button"
                android:textSize="20sp"
                app:layout_column="2"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_row="0" />

            <Button
                android:id="@+id/divide_button"
                android:fontFamily="sans-serif-medium"
                android:text="@string/divide_button"
                android:textSize="20sp"
                app:layout_column="3"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_row="0" />

            <!-- row2 -->
            <Button
                android:id="@+id/seven_button"
                android:fontFamily="sans-serif-medium"
                android:text="@string/seven_button"
                android:textSize="20sp"
                app:layout_column="0"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_row="1" />

            <Button
                android:id="@+id/eight_button"
                android:fontFamily="sans-serif-medium"
                android:text="@string/eight_button"
                android:textSize="20sp"
                app:layout_column="1"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_row="1" />

            <Button
                android:id="@+id/nine_button"
                android:fontFamily="sans-serif-medium"
                android:text="@string/nine_button"
                android:textSize="20sp"
                app:layout_column="2"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_row="1" />

            <Button
                android:id="@+id/multiple_button"
                android:fontFamily="sans-serif-medium"
                android:text="@string/multiple_button"
                android:textSize="20sp"
                app:layout_column="3"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_row="1" />

            <!-- row3 -->
            <Button
                android:id="@+id/four_button"
                android:fontFamily="sans-serif-medium"
                android:text="@string/four_button"
                android:textSize="20sp"
                app:layout_column="0"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_row="2" />

            <Button
                android:id="@+id/five_button"
                android:fontFamily="sans-serif-medium"
                android:text="@string/five_button"
                android:textSize="20sp"
                app:layout_column="1"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_row="2" />

            <Button
                android:id="@+id/six_button"
                android:fontFamily="sans-serif-medium"
                android:text="@string/six_button"
                android:textSize="20sp"
                app:layout_column="2"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_row="2" />

            <Button
                android:id="@+id/minus_button"
                android:fontFamily="sans-serif-medium"
                android:text="@string/minus_button"
                android:textSize="20sp"
                app:layout_column="3"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_row="2" />

            <!-- row4 -->
            <Button
                android:id="@+id/one_button"
                android:fontFamily="sans-serif-medium"
                android:text="@string/one_button"
                android:textSize="20sp"
                app:layout_column="0"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_row="3" />

            <Button
                android:id="@+id/two_button"
                android:fontFamily="sans-serif-medium"
                android:text="@string/two_button"
                android:textSize="20sp"
                app:layout_column="1"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_row="3" />

            <Button
                android:id="@+id/three_button"
                android:fontFamily="sans-serif-medium"
                android:text="@string/three_button"
                android:textSize="20sp"
                app:layout_column="2"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_row="3" />

            <Button
                android:id="@+id/plus_button"
                android:fontFamily="sans-serif-medium"
                android:text="@string/plus_button"
                android:textSize="20sp"
                app:layout_column="3"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_row="3" />

            <!-- row5 -->
            <Button
                android:id="@+id/zero_button"
                android:fontFamily="sans-serif-medium"
                android:text="@string/zero_button"
                android:textSize="20sp"
                app:layout_column="0"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_row="4" />

            <Button
                android:id="@+id/answer_button"
                android:fontFamily="sans-serif-medium"
                android:text="@string/answer_button"
                android:textSize="20sp"
                app:layout_column="1"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_row="4" />

            <Button
                android:id="@+id/dot_button"
                android:fontFamily="sans-serif-medium"
                android:text="@string/dot_button"
                android:textSize="20sp"
                app:layout_column="2"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_row="4" />

            <Button
                android:id="@+id/equal_button"
                android:fontFamily="sans-serif-medium"
                android:text="@string/equal_button"
                android:textSize="20sp"
                app:layout_column="3"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_row="4" />


        </androidx.gridlayout.widget.GridLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
